fix(tests): use junit5 provider